add swagger info for user handlers
