# internal/adapters/http/handlers/user/create.go
@@ -9,22 +9,33 @@ import (
 	"github.com/go-jedi/foodgrammm-backend/pkg/apperrors"
 )
 
+// @Summary Create a new user
+// @Description Create a new user with the provided details.
+// @Tags users
+// @Accept json
+// @Produce json
+// @Param user body user.CreateDTO true "User data"
+// @Success 201 {object} user.User
+// @Failure 400 {object} user.ErrorResponse
+// @Failure 409 {object} user.ErrorResponse
+// @Failure 500 {object} user.ErrorResponse
+// @Router /v1/user [post]
 func (h *Handler) create(c *gin.Context) {
 	var dto user.CreateDTO
 	if err := c.ShouldBindJSON(&dto); err != nil {
 		h.logger.Error("failed to bind body", "error", err)
-		c.JSON(http.StatusBadRequest, gin.H{
-			"error":  "failed to bind body",
-			"detail": err.Error(),
+		c.JSON(http.StatusBadRequest, user.ErrorResponse{
+			Error:  "failed to bind body",
+			Detail: err.Error(),
 		})
 		return
 	}
 
 	if err := h.validator.Struct(dto); err != nil {
 		h.logger.Error("failed to validate struct", "error", err)
-		c.JSON(http.StatusBadRequest, gin.H{
-			"error":  "failed to validate struct",
-			"detail": err.Error(),
+		c.JSON(http.StatusBadRequest, user.ErrorResponse{
+			Error:  "failed to validate struct",
+			Detail: err.Error(),
 		})
 		return
 	}
@@ -33,17 +44,17 @@ func (h *Handler) create(c *gin.Context) {
 	if err != nil {
 		if errors.Is(err, apperrors.ErrUserAlreadyExists) {
 			h.logger.Error("user already exists", "error", err)
-			c.JSON(http.StatusConflict, gin.H{
-				"error":  "user already exists",
-				"detail": err.Error(),
+			c.JSON(http.StatusConflict, user.ErrorResponse{
+				Error:  "user already exists",
+				Detail: err.Error(),
 			})
 			return
 		}
 
 		h.logger.Error("failed to create user", "error", err)
-		c.JSON(http.StatusInternalServerError, gin.H{
-			"error":  "failed to create user",
-			"detail": err.Error(),
+		c.JSON(http.StatusInternalServerError, user.ErrorResponse{
+			Error:  "failed to create user",
+			Detail: err.Error(),
 		})
 		return
 	}
