# internal/adapters/http/handlers/user/get_by_id.go
@@ -5,16 +5,27 @@ import (
 	"strconv"
 
 	"github.com/gin-gonic/gin"
+	"github.com/go-jedi/foodgrammm-backend/internal/domain/user"
 	"github.com/go-jedi/foodgrammm-backend/pkg/apperrors"
 )
 
+// @Summary Get a user by ID
+// @Description Retrieve a user by their unique identifier.
+// @Tags users
+// @Accept json
+// @Produce json
+// @Param userID path int64 true "User ID"
+// @Success 200 {object} user.User "User details"
+// @Failure 400 {object} user.ErrorResponse
+// @Failure 500 {object} user.ErrorResponse
+// @Router /v1/user/id/{userID} [get]
 func (h *Handler) getByID(c *gin.Context) {
 	userID := c.Param("userID")
 	if userID == "" {
 		h.logger.Error("failed to get param userID", "error", apperrors.ErrParamIsRequired)
-		c.JSON(http.StatusBadRequest, gin.H{
-			"error":  "failed to get param userID",
-			"detail": apperrors.ErrParamIsRequired,
+		c.JSON(http.StatusBadRequest, user.ErrorResponse{
+			Error:  "failed to get param userID",
+			Detail: apperrors.ErrParamIsRequired.Error(),
 		})
 		return
 	}
@@ -27,18 +38,18 @@ func (h *Handler) getByID(c *gin.Context) {
 	userIDInt, err := strconv.ParseInt(userID, base, bitSize)
 	if err != nil {
 		h.logger.Error("failed parse string to int64", "error", err)
-		c.JSON(http.StatusBadRequest, gin.H{
-			"error":  "failed parse string to int64",
-			"detail": err.Error(),
+		c.JSON(http.StatusBadRequest, user.ErrorResponse{
+			Error:  "failed parse string to int64",
+			Detail: err.Error(),
 		})
 		return
 	}
 
 	if userIDInt <= 0 {
 		h.logger.Error("userID is less than or equal to zero", "error", err)
-		c.JSON(http.StatusBadRequest, gin.H{
-			"error":  "userID must be greater than zero",
-			"detail": "the provided userID is less than or equal to zero, which is not allowed",
+		c.JSON(http.StatusBadRequest, user.ErrorResponse{
+			Error:  "userID must be greater than zero",
+			Detail: "the provided userID is less than or equal to zero, which is not allowed",
 		})
 		return
 	}
@@ -46,9 +57,9 @@ func (h *Handler) getByID(c *gin.Context) {
 	result, err := h.userService.GetByID(c, userIDInt)
 	if err != nil {
 		h.logger.Error("failed to get user by id", "error", err)
-		c.JSON(http.StatusInternalServerError, gin.H{
-			"error":  "failed to get user by id",
-			"detail": err.Error(),
+		c.JSON(http.StatusInternalServerError, user.ErrorResponse{
+			Error:  "failed to get user by id",
+			Detail: err.Error(),
 		})
 		return
 	}
