# internal/adapters/http/handlers/user/get_by_telegram_id.go
@@ -4,16 +4,27 @@ import (
 	"net/http"
 
 	"github.com/gin-gonic/gin"
+	"github.com/go-jedi/foodgrammm-backend/internal/domain/user"
 	"github.com/go-jedi/foodgrammm-backend/pkg/apperrors"
 )
 
+// @Summary Get a user by Telegram ID
+// @Description Retrieve a user by their unique Telegram ID.
+// @Tags users
+// @Accept json
+// @Produce json
+// @Param telegramID path string true "Telegram ID"
+// @Success 200 {object} user.User "User details"
+// @Failure 400 {object} user.ErrorResponse
+// @Failure 500 {object} user.ErrorResponse
+// @Router /v1/user/telegram/{telegramID} [get]
 func (h *Handler) getByTelegramID(c *gin.Context) {
 	telegramID := c.Param("telegramID")
 	if telegramID == "" {
 		h.logger.Error("failed to get param telegramID", "error", apperrors.ErrParamIsRequired)
-		c.JSON(http.StatusBadRequest, gin.H{
-			"error":  "failed to get param telegramID",
-			"detail": apperrors.ErrParamIsRequired,
+		c.JSON(http.StatusBadRequest, user.ErrorResponse{
+			Error:  "failed to get param telegramID",
+			Detail: apperrors.ErrParamIsRequired.Error(),
 		})
 		return
 	}
@@ -21,9 +32,9 @@ func (h *Handler) getByTelegramID(c *gin.Context) {
 	result, err := h.userService.GetByTelegramID(c, telegramID)
 	if err != nil {
 		h.logger.Error("failed to get user by telegramID", "error", err)
-		c.JSON(http.StatusInternalServerError, gin.H{
-			"error":  "failed to get user by telegramID",
-			"detail": err.Error(),
+		c.JSON(http.StatusInternalServerError, user.ErrorResponse{
+			Error:  "failed to get user by telegramID",
+			Detail: err.Error(),
 		})
 		return
 	}
