# internal/domain/user/types.go
@@ -1,0 +1,7 @@
+package user
+
+// ErrorResponse represents a generic error response.
+type ErrorResponse struct {
+	Error  string `json:"error"`
+	Detail string `json:"detail"`
+}
